--- a/portfolio.html
+++ b/portfolio.html
@@ -5,88 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>WS-Portfolio</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+    <header class="page-header">
+        <nav class="site-nav">
+            <a class="logo" href="./index.html">Web<span class="logo two">Studio</span></a>
+            <ul class="list">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href=""class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        <ul class="contacts list">
+            <li><a lang="en" href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        </ul>                        
     </header>
         <main>
-            <section>
-            <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+            <section class="portfolio">
+            <ul class="portfolio-nav list">
+                <li>
+                    <button class="button" type="button">Все</button>
+                </li>
+                <li>
+                    <button class="button" type="button">Веб-сайты</button>
+                </li>
+                <li>
+                    <button class="button" type="button">Приложения</button>
+                </li>
+                <li>
+                    <button class="button" type="button">Дизайн</button>
+                </li>
+                <li>
+                    <button class="button" type="button">Маркетинг</button>
+                </li>
             </ul>
-            <ul>
+            <ul class="portfolio-gallery list">
                 <li>
                     <img src="./images/technocrack.jpg" alt="Сайт на экране ноутбука" width="370">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="title">Технокряк</h2>
+                    <p class="text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/poster.jpg" alt="Постер баскетбольных клубов" width="370">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                    <p class="text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/restaurant.jpg" alt="Логотип ресторана" width="370">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <h2 class="title">Ресторан Seafood</h2>
+                    <p class="text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/headphone.jpg" alt="Наушники" width="370">
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="title">Проект Prime</h2>
+                    <p class="text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/boxes.jpg" alt="Коробочки" width="370">
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <h2 class="title">Проект Boxes</h2>
+                    <p class="text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/pc.jpg" alt="Монитор компьютера" width="370">
-                    <h2 lang="en">Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="title" lang="en">Inspiration has no Borders</h2>
+                    <p class="text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/magazine.jpg" alt="Журнал издания" width="370">
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <h2 class="title">Издание Limited Edition</h2>
+                    <p class="text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/label.jpg" alt="Ярлык" width="370">
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="title">Проект LAB</h2>
+                    <p class="text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/laptop.jpg" alt="Ноутбук" width="370">
-                    <h2>Growing Business</h2>
-                    <p>Приложение</p>
+                    <h2 class="title">Growing Business</h2>
+                    <p class="text">Приложение</p>
                 </li>                
             </ul>
             </section>
         </main>
-        <footer>
-            <a href="./index.html">WebStudio</a>
-            <address>
-                г. Киев, пр-т Леси Украинки, 26
-                <a lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <footer class="page-footer">
+                <a class="logo" href="./index.html">Web<span class="logo three">Studio</span></a>
+            <address class="address">
+                <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+                <a lang="en" href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
             </address>
         </footer>
 </body>
