--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="site-nav">
             <a class="logo" href="./index.html">Web<span class="logo two">Studio</span></a>
             <ul class="list">
-                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./index.html" class="link current">Студия</a></li>
                 <li><a href="./portfolio.html" class="link">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
