--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
             <a class="logo" href="./index.html">Web<span class="logo two">Studio</span></a>
             <ul class="list">
                 <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
                 <li><a href=""class="link">Контакты</a></li>
             </ul>
         </nav>
@@ -99,5 +99,10 @@
                 <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
             </address>
         </footer>
+        
 </body>
 </html>
+
+
+
+
